# GameboyEmulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GameboyEmulator.sln  GenerateProjects.bat  LICENSE  README.md  notes.txt  premake5.lua
.github/workflows/: cmake.yml
GameboyEmulator/: CMakeLists.txt  GameboyEmulator.vcxproj  GameboyEmulator.vcxproj.filters  imgui.ini
GameboyEmulator/config/: config.json
GameboyEmulator/dependencies/GLAD/: Glad.vcxproj  premake5.lua
GameboyEmulator/dependencies/GLAD/bin_int/Debug-windows-x86_64/Glad/Glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
GameboyEmulator/dependencies/GLAD/include/glad/: glad.h
GameboyEmulator/dependencies/GLAD/src/: glad.c
GameboyEmulator/dependencies/GLFW/: GLFW.vcxproj  premake5.lua
GameboyEmulator/dependencies/SDL2/lib/: SDL2-static.lib  SDL2.exp  SDL2main.lib
GameboyEmulator/dependencies/imgui/: ImGui.vcxproj  ImGui.vcxproj.filters  premake5.lua
GameboyEmulator/dependencies/imgui/bin_int/Debug-windows-x86/ImGui/ImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ImGui.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
GameboyEmulator/dependencies/imgui/bin_int/Debug-windows-x86_64/ImGui/: ImGui.vcxproj.FileListAbsolute.txt
GameboyEmulator/dependencies/imgui/bin_int/Debug-windows-x86_64/ImGui/ImGui.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
GameboyEmulator/src/: Application.cpp  Application.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleOutput.cpp  ConsoleOutput.h  Error.h  Source.cpp
GameboyEmulator/src/core/: Application.cpp  Application.h
GameboyEmulator/src/core/gb/: AddressBus.cpp  AddressBus.h  CPU.cpp  CPU.h  IO.cpp  IO.h  InterruptRegister.h  MemoryController.h  MemoryObject.h  RAM.h  ROM.h  Timer.cpp  Timer.h
GameboyEmulator/src/core/gb/cpu/: CPU.cpp  CPU.h  Decoder.cpp  Decoder.h  Instruction.h  Operation.cpp  Operation.h  instructions.cpp
GameboyEmulator/src/gb/: AddressBus.cpp  AddressBus.h  IO.cpp  IO.h  InterruptRegister.h  MemoryController.h  MemoryObject.h  RAM.h  ROM.h  Timer.cpp  Timer.h
GameboyEmulator/src/gb/cpu/: CPU.cpp  CPU.h  CPUUtils.cpp  CPUUtils.h  Decoder.cpp  Decoder.h  InstructionStep.h  Instructions.h  Operation.cpp  Operation.h  Registers.h  instructions.cpp
GameboyEmulator/src/gb/memory/: BasicComponents.cpp  BasicComponents.h  Memory.h
GameboyEmulator/src/tests/: AddressBusTest.cpp  Common.h  ConsoleInputTest.cpp  DecoderTest.cpp  FlagFunc.cpp  InterruptRegisterTest.cpp  Test.cpp  Test.h  TestCoroutine.cpp  TimerTest.cpp
GameboyEmulator/src/tests/integration/: IntegrationTest.cpp  IntegrationTest.h  RunTestRom.cpp
GameboyEmulator/src/utils/: Disassembler.h  FileManager.h  MemoryObserver.h  Utils.cpp  Utils.h
TestRoms/blargg/cpu_instrs/individual/: corrupt.gb
bin_int/Debug-windows-x86/GameboyEmulator/: GameboyEmulator.exe.recipe  vc142.idb
bin_int/Debug-windows-x86/GameboyEmulator/GameboyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin_int/Debug-windows-x86_64/GameboyEmulator/: GameboyEmulator.exe.recipe  vc142.idb
bin_int/Debug-windows-x86_64/GameboyEmulator/GameboyEmulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameboyEmulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glad/include/glad/: gl.h  glad.h
glad/src/: glad.c
src/: Application.cpp  Application.h  Breakpoint.cpp  Breakpoint.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleOutput.cpp  ConsoleOutput.h  Renderer.cpp  Renderer.h  Source.cpp  application.cpp  application.h  breakpoint.cpp  breakpoint.h  disassembler.h  main.cpp  renderer.cpp  renderer.h
src/gb/: AddressBus.cpp  AddressBus.h  Emulator.h  InterruptRegister.h  Timer.cpp  Timer.h  address_bus.cpp  address_bus.h  emulator.h  gb_input.h  interrupt_register.h  timer.cpp  timer.h
src/gb/cpu/: CPU.cpp  CPU.h  CPUUtils.cpp  CPUUtils.h  Decoder.cpp  Decoder.h  Instructions.cpp  Operation.cpp  Operation.h  cpu.cpp  cpu.h  cpu_utils.h  decoder.cpp  decoder.h  instructions.cpp  operation.cpp  operation.h
src/gb/memory/: BasicComponents.h  Memory.cpp  Memory.h  basic_components.cpp  basic_components.h  memory_map.h
src/gb/ppu/: PPU.cpp  PPU.h  ppu.cpp  ppu.h
src/tests/: AddressBusTest.cpp  ConsoleInputTest.cpp  DecoderTest.cpp  InterruptRegisterTest.cpp  MemoryBreakpointTreeTest.cpp  MemoryBreakpointsTest.cpp  TimerTest.cpp  decoder_test.cpp  interrupt_register_test.cpp  memory_breakpoints_test.cpp  timer_test.cpp
src/tests/integration/: IntegrationTest.cpp  intergration_test.cpp
src/util/: util.h
src/utils/: Utils.cpp  Utils.h
